Fix extra padding at the bottom of the navbar

--- a/app/assets/stylesheets/modules/header.scss
+++ b/app/assets/stylesheets/modules/header.scss
@@ -1,5 +1,5 @@
 #header-navbar {
   .navbar-brand {
-    height: 52px;
+    height: 56px;
   }
 }
