--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -2,7 +2,6 @@
 $vatican-blue: #1c315b;
 
 // Bootstrap Overrides
-$navbar-height: 56px;
 $navbar-inverse-bg: $vatican-blue;
 $navbar-inverse-link-active-bg: darken($vatican-blue, 5%);
 $navbar-inverse-link-color: #d8d8d8;
